--- a/app/src/main/res/layouts/habit/layout/habit_mind_choose.xml
+++ b/app/src/main/res/layouts/habit/layout/habit_mind_choose.xml
@@ -8,6 +8,8 @@
     android:gravity="center"
     android:background="@drawable/app_background"
     tools:context=".main.ui.home.habit.HabitMind"
+
+    android:clickable="true"
     >
 
     <LinearLayout
@@ -18,7 +20,7 @@
         >
 
         <ImageButton
-            android:id="@+id/habit_choose_back_button"
+            android:id="@+id/back_button"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
 
@@ -26,7 +28,7 @@
             android:scaleType="fitXY"/>
 
         <TextView
-            android:id="@+id/onboarding_instruction_title"
+            android:id="@+id/habit_choose_mind_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
@@ -35,8 +37,10 @@
             />
 
         <ImageView
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxHeight="30dp"
+            android:maxWidth="30dp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             android:src="@drawable/habit_mind_icon" />
@@ -46,103 +50,118 @@
     <TableLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:stretchColumns="0,1"
+        android:layout_margin="30dp"
         >
-    <TableRow>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/item_habit">
-            <ImageButton
+        <TableRow
+            android:gravity="center"
+            android:layout_marginBottom="20dp">
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintDimensionRatio="H,1:1"
+                android:orientation="vertical"
+                android:background="@drawable/item_habit"
+                android:layout_marginRight="20dp">
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxHeight="120dp"
+                    android:maxWidth="120dp"
 
-                android:src="@drawable/habit_mind_meditate"
-                android:background="@null"
-                android:scaleType="fitXY"
-                android:adjustViewBounds="true"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/habit_mind_meditate"
-                android:fontFamily="@font/montserrat_bold"
-                android:textSize="@dimen/textview_middle_size"/>
-        </LinearLayout>
+                    android:src="@drawable/habit_mind_meditate"
+                    android:background="@null"
+                    android:scaleType="fitXY"
+                    android:adjustViewBounds="true"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/habit_mind_meditate"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:textSize="@dimen/textview_middle_size"/>
+            </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/item_habit">
-            <ImageButton
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/item_habit">
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxHeight="120dp"
+                    android:maxWidth="120dp"
 
-                android:src="@drawable/habit_mind_read"
-                android:background="@null"
-                android:scaleType="fitXY"
-                android:adjustViewBounds="true"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/habit_mind_read"
-                android:fontFamily="@font/montserrat_bold"
-                android:textSize="@dimen/textview_middle_size"/>
-        </LinearLayout>
+                    android:src="@drawable/habit_mind_read"
+                    android:background="@null"
+                    android:scaleType="fitXY"
+                    android:adjustViewBounds="true"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/habit_mind_read"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:textSize="@dimen/textview_middle_size"/>
+            </LinearLayout>
 
-    </TableRow>
+        </TableRow>
 
-    <TableRow>
+        <TableRow
+            android:gravity="center">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/item_habit">
-            <ImageButton
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/item_habit"
+                android:layout_marginRight="20dp">
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxWidth="120dp"
 
-                android:src="@drawable/habit_mind_journal"
-                android:background="@null"
-                android:scaleType="fitXY"
-                android:adjustViewBounds="true"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/habit_mind_journal"
-                android:fontFamily="@font/montserrat_bold"
-                android:textSize="@dimen/textview_middle_size"/>
-        </LinearLayout>
+                    android:src="@drawable/habit_mind_journal"
+                    android:background="@null"
+                    android:scaleType="fitXY"
+                    android:adjustViewBounds="true"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/habit_mind_journal"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:textSize="@dimen/textview_middle_size"/>
+            </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/item_habit">
-            <ImageButton
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/item_habit">
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxWidth="120dp"
+                    android:maxHeight="120dp"
 
-                android:src="@drawable/habit_mind_study"
-                android:background="@null"
-                android:scaleType="fitXY"
-                android:adjustViewBounds="true"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/habit_mind_study"
-                android:fontFamily="@font/montserrat_bold"
-                android:textSize="@dimen/textview_middle_size"/>
-        </LinearLayout>
-    </TableRow>
+                    android:src="@drawable/habit_mind_study"
+                    android:background="@null"
+                    android:scaleType="fitXY"
+                    android:adjustViewBounds="true"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/habit_mind_study"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:textSize="@dimen/textview_middle_size"/>
+            </LinearLayout>
+
+        </TableRow>
+
     </TableLayout>
 
 </LinearLayout>
