--- a/app/src/main/res/layouts/onboarding/layout/ob_select_partner_screen.xml
+++ b/app/src/main/res/layouts/onboarding/layout/ob_select_partner_screen.xml
@@ -6,7 +6,7 @@
     android:gravity="center"
     android:background="@drawable/app_background"
     android:orientation="vertical"
-    tools:context=".onboarding.ob_SelectPartnerScreen">
+    tools:context=".onboarding.OnboardingSelectPartnerScreen">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -77,7 +77,7 @@
                 android:orientation="vertical"
                 android:background="@drawable/item_habit">
                 <ImageButton
-                    android:id="@+id/onboarding_dog_button"
+                    android:id="@+id/onboarding_dog_choose"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxHeight="120dp"
@@ -108,7 +108,7 @@
                 android:background="@drawable/item_habit"
                 android:layout_marginRight="20dp">
                 <ImageButton
-                    android:id="@+id/onboarding_cat_button"
+                    android:id="@+id/onboarding_cat_choose"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxWidth="120dp"
